--- a/templates/stats2.html
+++ b/templates/stats2.html
@@ -15,7 +15,7 @@
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+  <link rel="stylesheet" href="/Users/neto/ARDUINO/CounterSnapAll/static/style.css">
   
 </head>
 <body>
@@ -61,22 +61,23 @@
         <div class="stat">
           <h2 class="stat__title stat__title--youtube">TOTAL</h2>
           <span class="stat__number">{{ records[0]['total'] }}</span>
-           <!-- Trigger the Modal -->
-      <img id="myImg" src="https://www.spinoff.digital/graphic.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
+	    </div>
+	    <!-- Trigger the Modal -->
+<img id="myImg" src="graphic.png" alt="Snow" style="width:50%;height:50%;max-width:300px">
 
-      <!-- The Modal -->
-      <div id="myModal" class="modal">
-      
-        <!-- The Close Button -->
-        <span class="close">&times;</span>
-      
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img01">
-      
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption">Click for Graphic</div>
-      </div>
-        </div>
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+</div>
+
       </div>
     </section>
   {% endif %}
@@ -115,32 +116,34 @@
       </div>
     </div>
   </section>
-  <script>
+<script>
 
-    // Get the modal
-    var modal = document.getElementById("myModal");
-    
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img = document.getElementById("myImg");
-    var modalImg = document.getElementById("img01");
-    var captionText = document.getElementById("caption");
-    img.onclick = function(){
-      modal.style.display = "block";
-      modalImg.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-    
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function() {
-      modal.style.display = "none";
-    }
-    
-    
-    
-    </script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImg");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+
+
+</script>
+
+
 
 
 </body>
