--- a/templates/stats.html
+++ b/templates/stats.html
@@ -23,7 +23,7 @@
   <section class="logo-wrapper">
     <div class="logo-stats">
         <img src="https://www.spinoff.digital/picture2.png" alt="Logo" style="width:600px;height:100px;">
-      </div>
+    </div>
     </section>
 
   {% if records|length %}
@@ -33,130 +33,55 @@
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">eMails</h2>
           <span class="stat__number">{{ records[0]['emailC'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg1" src="https://www.spinoff.digital/graphicEm.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal1" class="modal">
-        <!-- The Close Button -->
-        <span class="close1">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img1">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption1">Click for Graphic</div>
         </div>
-      </div>
 
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">YouTube BR</h2>
           <span class="stat__number">{{ records[0]['youtube'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg2" src="https://www.spinoff.digital/graphicYB.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal2" class="modal">
-        <!-- The Close Button -->
-        <span class="close2">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img2">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption2">Click for Graphic</div>
         </div>
-      </div>
 
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">Twitter BR</h2>
           <span class="stat__number">{{ records[0]['twitter'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg3" src="https://www.spinoff.digital/graphicTB.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal3" class="modal">
-        <!-- The Close Button -->
-        <span class="close3">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img3">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption3">Click for Graphic</div>
         </div>
-      </div>
       
-      <div class="stat">
+        <div class="stat">
           <h2 class="stat__title stat__title--twitter">Insta BR</h2>
           <span class="stat__number">{{ records[0]['instagram'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg4" src="https://www.spinoff.digital/graphicIB.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal4" class="modal">
-        <!-- The Close Button -->
-        <span class="close4">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img4">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption4">Click for Graphic</div>
         </div>
-      </div>
+
+
+        <div class="stat">
+          <h2 class="stat__title stat__title--twitter">TikTok BR</h2>
+          <span class="stat__number">{{ records[0]['tiktokB'] }}</span>
+        </div>
 
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">YouTube LT</h2>
           <span class="stat__number">{{ records[0]['youtubeL'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg5" src="https://www.spinoff.digital/graphicYL.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal5" class="modal">
-        <!-- The Close Button -->
-        <span class="close5">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img5">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption5">Click for Graphic</div>
         </div>
-      </div>
 
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">Twitter LT</h2>
           <span class="stat__number">{{ records[0]['twitterL'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg6" src="https://www.spinoff.digital/graphicTL.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal6" class="modal">
-        <!-- The Close Button -->
-        <span class="close6">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img6">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption6">Click for Graphic</div>
         </div>
-      </div>
 
         <div class="stat">
           <h2 class="stat__title stat__title--twitter">Insta LT</h2>
           <span class="stat__number">{{ records[0]['instagramL'] }}</span>
-                <!-- Trigger the Modal -->
-      <img id="myImg7" src="https://www.spinoff.digital/graphicIL.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal7" class="modal">
-        <!-- The Close Button -->
-        <span class="close7">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img7">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption7">Click for Graphic</div>
         </div>
-      </div>
         
+
+      <div class="stat">
+        <h2 class="stat__title stat__title--twitter">TikTok LT</h2>
+        <span class="stat__number">{{ records[0]['tiktokL'] }}</span>
+      </div>
+
         <div class="stat">
           <h2 class="stat__title stat__title--youtube">TOTAL</h2>
           <span class="stat__number">{{ records[0]['total'] }}</span>
-           <!-- Trigger the Modal -->
-      <img id="myImg8" src="https://www.spinoff.digital/graphicT.png" alt="Growth" style="width:20%;height:20%;max-width:300px">
-      <!-- The Modal -->
-      <div id="myModal8" class="modal">
-        <!-- The Close Button -->
-        <span class="close8">&times;</span>
-        <!-- Modal Content (The Image) -->
-        <img class="modal-content" id="img8">
-        <!-- Modal Caption (Image Text) -->
-        <div id="caption8">Click for Graphic</div>
-      </div>
-        </div>
+       </div>
+       
       </div>
     </section>
   {% endif %}
@@ -170,9 +95,11 @@
           <div class="table__cell">YouTubeBR</div>
           <div class="table__cell">TwitterBR</div>
           <div class="table__cell">InstagramBR</div>
+          <div class="table__cell">TikTokB</div>
           <div class="table__cell">YouTubeLT</div>
           <div class="table__cell">TwitterLT</div>
-          <div class="table__cell">InstagramLT</div>
+          <div class="table__cell">InstagramL</div>
+          <div class="table__cell">TikTokL</div>
           <div class="table__cell">TOTAL</div>
         </div>
         {% for entry in records %}
@@ -182,9 +109,11 @@
             <div class="table__cell">{{ entry['youtube'] }}</div>
             <div class="table__cell">{{ entry['twitter'] }}</div>
             <div class="table__cell">{{ entry['instagram'] }}</div>
+            <div class="table__cell">{{ entry['tiktokB'] }}</div>
             <div class="table__cell">{{ entry['youtubeL'] }}</div>
             <div class="table__cell">{{ entry['twitterL'] }}</div>
             <div class="table__cell">{{ entry['instagramL'] }}</div>
+            <div class="table__cell">{{ entry['tiktokL'] }}</div>
             <div class="table__cell">{{ entry['total'] }}</div>
           </div>
         {% else %}
@@ -195,162 +124,8 @@
       </div>
     </div>
   </section>
-  <script>
-
-    // Get the modal
-    var modal1 = document.getElementById("myModal1");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img1 = document.getElementById("myImg1");
-    var modalImg1 = document.getElementById("img1");
-    var captionText1 = document.getElementById("caption1");
-    img1.onclick = function()
-    {
-      modal1.style.display = "block";
-      modalImg1.src = this.src;
-      captionText1.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-    var span1 = document.getElementsByClassName("close1")[0];
-    // When the user clicks on <span> (x), close the modal
-    span1.onclick = function() 
-    {
-      modal1.style.display = "none";
-    }
-
-      // Get the modal
-    var modal2 = document.getElementById("myModal2");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img2 = document.getElementById("myImg2");
-    var modalImg2 = document.getElementById("img2");
-    var captionText2 = document.getElementById("caption2");
-    img2.onclick = function(){
-      modal2.style.display = "block";
-      modalImg2.src = this.src;
-      captionText2.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span2 = document.getElementsByClassName("close2")[0];
-    // When the user clicks on <span> (x), close the modal
-    span2.onclick = function() {
-      modal2.style.display = "none";
-    }
-
-
-      // Get the modal
-    var modal3 = document.getElementById("myModal3");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img3 = document.getElementById("myImg3");
-    var modalImg3 = document.getElementById("img3");
-    var captionText = document.getElementById("caption3");
-    img3.onclick = function(){
-      modal3.style.display = "block";
-      modalImg3.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span3 = document.getElementsByClassName("close3")[0];
-    // When the user clicks on <span> (x), close the modal
-    span3.onclick = function() {
-      modal3.style.display = "none";
-    }
-
-
-     // Get the modal
-     var modal4 = document.getElementById("myModal4");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img4 = document.getElementById("myImg4");
-    var modalImg4 = document.getElementById("img4");
-    var captionText = document.getElementById("caption4");
-    img4.onclick = function(){
-      modal4.style.display = "block";
-      modalImg4.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span4 = document.getElementsByClassName("close4")[0];
-    // When the user clicks on <span> (x), close the modal
-    span4.onclick = function() {
-      modal4.style.display = "none";
-    }
-
-         // Get the modal
-         var modal5 = document.getElementById("myModal5");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img5 = document.getElementById("myImg5");
-    var modalImg5 = document.getElementById("img5");
-    var captionText = document.getElementById("caption5");
-    img5.onclick = function(){
-      modal5.style.display = "block";
-      modalImg5.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span5 = document.getElementsByClassName("close5")[0];
-    // When the user clicks on <span> (x), close the modal
-    span5.onclick = function() {
-      modal5.style.display = "none";
-    }
-
-
-
-         // Get the modal
-         var modal6 = document.getElementById("myModal6");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img6 = document.getElementById("myImg6");
-    var modalImg6 = document.getElementById("img6");
-    var captionText = document.getElementById("caption6");
-    img6.onclick = function(){
-      modal6.style.display = "block";
-      modalImg6.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span6 = document.getElementsByClassName("close6")[0];
-    // When the user clicks on <span> (x), close the modal
-    span6.onclick = function() {
-      modal6.style.display = "none";
-    }
-
-
-         // Get the modal
-         var modal7 = document.getElementById("myModal7");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img7 = document.getElementById("myImg7");
-    var modalImg7 = document.getElementById("img7");
-    var captionText = document.getElementById("caption7");
-    img7.onclick = function(){
-      modal7.style.display = "block";
-      modalImg7.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span7 = document.getElementsByClassName("close7")[0];
-    // When the user clicks on <span> (x), close the modal
-    span7.onclick = function() {
-      modal7.style.display = "none";
-    }
-
-
-         // Get the modal
-         var modal8 = document.getElementById("myModal8");
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img8 = document.getElementById("myImg8");
-    var modalImg8 = document.getElementById("img8");
-    var captionText = document.getElementById("caption8");
-    img8.onclick = function(){
-      modal8.style.display = "block";
-      modalImg8.src = this.src;
-      captionText.innerHTML = this.alt;
-    }
-    // Get the <span> element that closes the modal
-      var span8 = document.getElementsByClassName("close8")[0];
-    // When the user clicks on <span> (x), close the modal
-    span8.onclick = function() {
-      modal8.style.display = "none";
-    }
-    
-    
-    </script>
+  <script>  
+  </script>
 
 
 </body>
